# primage

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/actions/package/: action.yml
.github/workflows/: ci.yml  release.yml
src/: cli.rs  codecs.rs  main.rs  pipeline.rs  term.rs  transform.rs
