[package]
name = "primage"
version = "0.1.0"
edition = "2021"
description = "Compress and convert images like Squoosh — as a fast CLI, in pure Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/imfing/squoosh-cli"
keywords = ["image", "compression", "avif", "webp", "oxipng"]
categories = ["command-line-utilities", "multimedia::images"]

[features]
default = ["avif"]
# AVIF encoding via ravif/rav1e (pure Rust)
avif = ["dep:ravif"]
# Real MozJPEG encoder (C library, same as Squoosh) instead of the pure-Rust
# baseline JPEG encoder. Enables progressive scans + optimized Huffman coding.
mozjpeg = ["dep:mozjpeg"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
image = { version = "0.25", default-features = false, features = [
    "bmp",
    "gif",
    "ico",
    "jpeg",
    "png",
    "pnm",
    "qoi",
    "tga",
    "tiff",
    "webp",
] }
image-webp = "0.2"
# Library only (skip oxipng's own CLI deps); keep rayon parallelism + zopfli.
oxipng = { version = "10", default-features = false, features = ["parallel", "zopfli"] }
mozjpeg = { version = "0.10", optional = true }
ravif = { version = "0.13", optional = true }

[profile.release]
lto = true
codegen-units = 1
